kubernetes/apps/skiut/skiut-backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skiut-backend
  namespace: skiut
spec:
  replicas: 3
  selector:
    matchLabels:
      app: skiut-backend
  template:
    metadata:
      labels:
        app: skiut-backend
    spec:
      containers:
        - name: skiut-backend
          image: ghcr.io/ski-utc/server-skiut-2026:2d5fd718235117c941a145ed77742f03fc2ed99e
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: laravel-storage
              mountPath: /var/www/html/storage
      volumes:
        - name: laravel-storage
          persistentVolumeClaim:
            claimName: skiut-backend-storage
