kubernetes/apps/skiut/skiut-database-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: skiut-database
  namespace: skiut
spec:
  serviceName: skiut-database
  replicas: 1
  selector:
    matchLabels:
      app: skiut-database
  template:
    metadata:
      labels:
        app: skiut-database
    spec:
      containers:
        - name: skiut-database
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: mysql-init-scripts
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              memory: "512Mi"
              cpu: "50m"
      volumes:
        - name: mysql-init-scripts
          configMap:
            name: skiut-database-init
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "local-path"
        resources:
          requests:
            storage: 10Gi
