kubernetes/apps/skiut/skiut-pma-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skiut-pma
  namespace: skiut
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skiut-pma
  template:
    metadata:
      labels:
        app: skiut-pma
    spec:
      containers:
        - name: skiut-pma
          image: phpmyadmin/phpmyadmin:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
