kubernetes/apps/skiut/skiut-proxysql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skiut-proxysql
  namespace: skiut
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skiut-proxysql
  template:
    metadata:
      labels:
        app: skiut-proxysql
    spec:
      containers:
        - name: skiut-proxysql
          image: proxysql/proxysql:3.0.2
          ports:
            - containerPort: 6033
            - containerPort: 6032
          volumeMounts:
            - name: proxysql-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
          command: ["/bin/sh", "-c"]
          args: ["/entrypoint.sh"]
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
      volumes:
        - name: proxysql-config
          configMap:
            name: skiut-proxysql-config
            defaultMode: 0755
