kubernetes/apps/skiut/skiut-database-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skiut-database-service
  namespace: skiut
spec:
  selector:
    app: skiut-database
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP
