kubernetes/apps/skiut/skiut-proxysql-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skiut-proxysql-service
  namespace: skiut
spec:
  selector:
    app: skiut-proxysql
  ports:
    - name: mysql
      port: 6033
      targetPort: 6033
      protocol: TCP
  type: ClusterIP
